--- a/request_tasks/postname.html
+++ b/request_tasks/postname.html
@@ -5,34 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+       document.addEventListener("DOMContentLoaded", () => {
+        const form = document.getElementById('delete-name-form');
+
+        form.addEventListener('submit', () => {
+          const formData = new FormData(form);
+          console.log(formData);
+          fetch("http://localhost:3065/namesdel" , {
+            method: "DELETE",
+            body: formData
+          }).then((res) => console.log(res));
+          event.preventDefault();
+        });
+      });
+      </script>
 </head>
 <body>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-		<div class="container">
-			<h1 class="text-center mt-3 mb-3">Submit Form Data in Node.js</h1>
-			<div class="card">
-				<div class="card-header">Sample Form</div>
-				<div class="card-body">
-					<form method="POST" action="/">
-						<div class="mb-3">
-							<label>First Name</label>
-							<input type="text" name="first_name" id="first_name" class="form-control" />
-						</div>
-						<div class="mb-3">
-							<label>Last Name</label>
-							<input type="text" name="last_name" id="last_name" class="form-control" />
-						</div>
-						<div class="mb-3">
-		                	<label>Email Address</label>
-		                	<input type="text" name="email_address" id="email_address" class="form-control" />
-		                </div>
-		                <div class="mb-3">
-		                	<input type="submit" name="submit_button" class="btn btn-primary" value="Add" />
-		                </div>
-					</form>
-				</div>
-			</div>
-		</div>
+    <form id="post-name-form" method="post" action="http://localhost:3065/names-post">
+        <label for="name-input-post">Name</label>
+        <input type="text" name="namepost" id="namepost" />
+        <button type="submit">post</button>
+    </form>
+        <br/>
+        <br/>
+    <form id="delete-name-form" action="http://localhost:3065/namesdel">
+        <label>Zu löschender Name</label>
+        <input type="text" name="name" id="namedelete" />
+        <button type="submit">Löschen</button>
+    </form>
 </body>
 </html>
